# cookiecutter-poetry-python-library

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .gitignore  Makefile  README.md  pyproject.toml
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_module}}/: app.py
